Modify navbar styles on scroll
navbar position fixed on scroll

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <!-- CONATAINER END -->
         </div>
         <!-- LANG SELECTOR END -->
-        <nav class="navbar">
+        <nav class="navbar" id="navbar">
             <div class="container">
                 <ul class="navbar__list w-100">
                     <li class="navbar__item pl-0">
@@ -61,6 +61,9 @@
         </nav>
         <!-- NAVIGATION END -->
     </div>
+
+    <!-- NAV FOR PC END -->
+    
     </header>
 
     <section class="hero">
@@ -99,7 +102,7 @@
                     </div>
                 </div>
                 <div class="col-md-5">
-                    <img src="./dist/images/Image-1.png" alt="" class="img-fluid w-100">
+                    <img src="./dist/images/Image-1.png" alt="" class="img-fluid  w-100">
                 </div>
             </div>
         </div>
@@ -108,14 +111,15 @@
 
     <section class="content-section section-padding">
         <div class="section-bgimg section-bgimg--right">
-            <img src="./dist/images/connect.png" alt="" class="img-fluid">
+            <img src="./dist/images/connect.png" alt="connect-IMG" class="img-fluid ">
         </div>
         <!-- BG IMG END -->
         <div class="content-section__wrapper">
             <div class="container">
-                <div class="row">
+                <div class="row row-sp--right">
                     <div class="col-md-6">
-                        <img src="./dist/images/sheapromotion_2.png" alt="connect-IMG" class="img-fluid">
+                        <img src="./dist/images/sheapromotion_2.png" alt="connect-IMG" class="img-fluid sp-displaynone">
+                        <img src="./dist/images/sheapromotion_2-sp.png" alt="connect-IMG" class="img-fluid pc-displaynone">
                     </div>
                     <div class="col-md-6">
                         <div class="text-content">
@@ -159,7 +163,7 @@
                             <h5 class="card-title">PRODUCER NATIONAL ASSOCIATIONS</h5>
                             <p class="card-text">123 resources</p>
                         </div>
-                        <img class="card-img-bottom" src="./dist/images/Member/istockphoto-113565772-612x612 1.png"
+                        <img class="card-img-bottom" src="./dist/images/Member/istockphoto-113565772-612x612_1.png"
                             alt="Card image cap">
                     </div>
                     <!-- CARD 1 -->
@@ -169,7 +173,7 @@
                             <h5 class="card-title">Suppliers</h5>
                             <p class="card-text">123 resources</p>
                         </div>
-                        <img class="card-img-bottom" src="./dist/images/Member/istockphoto-113565772-612x612 3.png"
+                        <img class="card-img-bottom" src="./dist/images/Member/istockphoto-113565772-612x612_3.png"
                             alt="Card image cap">
                     </div>
                     <!-- CARD 1 -->
@@ -180,7 +184,7 @@
                                 Retailers</h5>
                             <p class="card-text">123 resources</p>
                         </div>
-                        <img class="card-img-bottom" src="./dist/images/Member/istockphoto-113565772-612x612 2.png"
+                        <img class="card-img-bottom" src="./dist/images/Member/istockphoto-113565772-612x612_2.png"
                             alt="Card image cap">
                     </div>
                     <!-- CARD 1 -->
@@ -190,7 +194,7 @@
                             <h5 class="card-title">Womens’ groups</h5>
                             <p class="card-text">123 resources</p>
                         </div>
-                        <img class="card-img-bottom" src="./dist/images/Member/istockphoto-113565772-612x612 1.png"
+                        <img class="card-img-bottom" src="./dist/images/Member/istockphoto-113565772-612x612_1.png"
                             alt="Card image cap">
                     </div>
                     <!-- CARD 1 -->
@@ -210,9 +214,10 @@
         <!-- BG IMG END -->
         <div class="content-section__wrapper">
             <div class="container">
-                <div class="row">
+                <div class="row row-sp--left">
                     <div class="col-md-6 pc-displaynone">
-                        <img src="./dist/images/Image.png" alt="learn-IMG" class="img-fluid">
+                        <img src="./dist/images/Image.png" alt="learn-IMG" class="img-fluid sp-displaynone">
+                        <img src="./dist/images/sheapromotion_2-sp1.png" alt="learn-IMG" class="img-fluid pc-displaynone">
                     </div> 
 
                     <div class="col-md-6">
@@ -343,7 +348,7 @@
                                     <img class="card-img-top card-img--border" src="./dist/images/XL/Resource/Image.png"
                                         alt="Card image cap">
                                         <div class="card-img__play">
-                                            <img src="./dist/images/XL/Resource/Polygon 2.png" alt="">
+                                            <img src="./dist/images/XL/Resource/Polygon_2.png" alt="">
                                         </div>
                                     </div>
                                     <div class="card-body">
