Integrate dropdown menu for sp view

--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
                                             <div class="row">
                                                 <div class="col-md-4">
                                                     <ul class="dropdown__list">
-                                                        <li class="dropdown__item dropdown__item--active"><a href="#"> Food</li>
+                                                        <li class="dropdown__item dropdown__item--active">
+                                                            <a href="#">Food</a>
+                                                        </li>
                                                         <li class="dropdown__item"> <a href="#">Cosmetics</a></li>
                                                         <li class="dropdown__item"><a href="#">Kernels</a></li>
                                                         <li class="dropdown__item"><a href="#">Butter</a></li>
@@ -67,11 +69,14 @@
                                                         <div class="col-md-6">
                                                             <div class="card card--bgnone">
                                                                 <img class="card-img-top card-img--border"
-                                                                    src="./dist/images/XL/Resource/Image-1.png" alt="Card image cap">
+                                                                    src="./dist/images/XL/Resource/Image-1.png"
+                                                                    alt="Card image cap">
                                                                 <div class="card-body card-body--bgnone">
-                                                                    <p class="card-text"><span class="card-tag">INDUSTRY</span><small
+                                                                    <p class="card-text"><span
+                                                                            class="card-tag">INDUSTRY</span><small
                                                                             class="card-update">i day ago</small></p>
-                                                                    <h5 class="card-text">VP Bawumia launches Parkland Restoration Fund to protect
+                                                                    <h5 class="card-text">VP Bawumia launches Parkland
+                                                                        Restoration Fund to protect
                                                                         shea parklands
                                                                     </h5>
                                                                 </div>
@@ -80,22 +85,26 @@
                                                         <div class="col-md-6">
                                                             <div class="card card--bgnone">
                                                                 <img class="card-img-top card-img--border"
-                                                                    src="./dist/images/XL/Resource/Image-1.png" alt="Card image cap">
+                                                                    src="./dist/images/XL/Resource/Image-1.png"
+                                                                    alt="Card image cap">
                                                                 <div class="card-body card-body--bgnone">
-                                                                    <p class="card-text"><span class="card-tag">INDUSTRY</span><small
+                                                                    <p class="card-text"><span
+                                                                            class="card-tag">INDUSTRY</span><small
                                                                             class="card-update">i day ago</small></p>
-                                                                    <h5 class="card-text">VP Bawumia launches Parkland Restoration Fund to protect
+                                                                    <h5 class="card-text">VP Bawumia launches Parkland
+                                                                        Restoration Fund to protect
                                                                         shea parklands
                                                                     </h5>
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        
+
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
+                                    <!-- DROPDROWN MENU END -->
                                 </div>
                             </li>
                             <li class="navbar__item nav-item">
@@ -116,6 +125,86 @@
         </div>
 
         <!-- NAV FOR PC END -->
+
+        <div class="pc-displaynone spnav">
+            <nav class="navbar ">
+                <div class="container">
+
+                    <!-- Navbar brand -->
+                    <a href="javascript:void(0)" class="navbar__logo navbar-brand">
+                        <img src="./dist/images/dummy-logo.svg" alt="LOGO" class="img-fluid">
+                    </a>
+
+                    <!-- Collapse button -->
+                    <button class="navbar-toggler second-button" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent23" aria-controls="navbarSupportedContent23"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <div class="animated-icon2"><span></span><span></span><span></span><span></span></div>
+                    </button>
+
+                    <!-- Collapsible content -->
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent23">
+
+                        <!-- Links -->
+                        <ul class="navbar-nav spnav__list mr-auto">
+                            <li class="nav-item spnav__item link">
+                                <a class="nav-link link__button" href="#">Learn <span class="link__arrow"></span><span
+                                        class="sr-only">(current)</span></a>
+
+                                        <ul class="spnav__inrlist">
+                                            <li class="spnav__inrlist__item"><a href="#"> Food </a></li>
+                                            <li class="spnav__inrlist__item"><a href="#"> Cosmetics</a></li>
+                                            <li class="spnav__inrlist__item"><a href="#"> Kernels</a></li>
+                                            <li class="spnav__inrlist__item"> <a href="#"> Butter</a></li>
+                                            <li class="spnav__inrlist__item"> <a href="#"> Sustainability</a></li>
+                                            <li class="spnav__inrlist__item"> <a href="#"> Industry</a></li>
+                                        </ul>
+
+                            </li>
+                            <li class="nav-item spnav__item link">
+                                <a class="nav-link link__button" href="#">Connect <span class="link__arrow"></span><span
+                                        class="sr-only">(current)</span></a>
+
+                                        <ul class="spnav__inrlist">
+                                            <li class="spnav__inrlist__item"><a href="#"> suppliers </a></li>
+                                            <li class="spnav__inrlist__item"><a href="#"> brands & <br> Retailers</a></li>
+                                            <li class="spnav__inrlist__item"><a href="#"> Nonprofits</a></li>
+                                            <li class="spnav__inrlist__item"> <a href="#">affiliate members</a></li>
+                                            <li class="spnav__inrlist__item"> <a href="#"> producer <br> national <br> associations</a></li>
+                                            
+                                        </ul>
+
+                            </li>
+                        </ul>
+                        <!-- Links -->
+
+                        <div class="langselector">
+                            <div class="container">
+                                <div class="langselector__wrapper">
+                                    <p class="langselector__label">
+                                        Select language:
+                                    </p>
+                                    <a href="javascript:void(0)"
+                                        class="langselector__btn langselector__btn--border langselector__btn--active">
+                                        en
+                                    </a>
+                                    <span class="line">
+                                    </span>
+                                    <a href="javascript:void(0)" class="langselector__btn">
+                                        fr
+                                    </a>
+                                </div>
+                            </div>
+                            <!-- CONATAINER END -->
+                        </div>
+
+                    </div>
+                    <!-- Collapsible content -->
+                </div>
+            </nav>
+            <!--/.Navbar-->
+
+        </div>
 
     </header>
 
