Add page transition jscript

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./dist/css/styles.css">
     <title>Company Website</title>
 </head>
@@ -14,7 +15,7 @@
         <div class="sp-displaynone">
             <div class="langselector">
                 <div class="container">
-                    <div class="langselector__wrapper">
+                    <div class="langselector__wrapper"> 
                         <p class="langselector__label">
                             Select language:
                         </p>
@@ -127,7 +128,7 @@
         <!-- NAV FOR PC END -->
 
         <div class="pc-displaynone spnav">
-            <nav class="navbar ">
+            <nav class="navbar" >
                 <div class="container">
 
                     <!-- Navbar brand -->
@@ -213,7 +214,7 @@
             <div class="row">
                 <div class="col-md-7">
                     <div class="hero__textcontent">
-                        <div class="hero__tabs">
+                        <div class="hero__tabs" data-aos="fade-up">
                             <ul class="hero__list">
                                 <li class="hero__item pl-0 hero__item--active"> Natural</li>
                                 <li class="hero__item">Sustainable</li>
@@ -221,13 +222,13 @@
                             </ul>
                         </div>
                         <!-- TAB END -->
-                        <h1 class="title">
+                        <h1 class="title" data-aos="fade-up" data-aos-delay="100">
                             ONE TREE <br>
                             INFINITE <br>
                             OPPORTUNITIES
                         </h1>
 
-                        <div class="hero__desc">
+                        <div class="hero__desc" data-aos="fade-up" data-aos-delay="200">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                                 ut
                                 labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
@@ -244,7 +245,7 @@
                         <!-- TAB END -->
                     </div>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-5" data-aos="fade-up" data-aos-delay="300">
                     <img src="./dist/images/Image-1.png" alt="" class="img-fluid  w-100">
                 </div>
             </div>
@@ -252,7 +253,7 @@
     </section>
     <!-- HERO  END -->
 
-    <section class="content-section section-padding">
+    <section  class="content-section section-padding">
         <div class="section-bgimg section-bgimg--right">
             <img src="./dist/images/connect.png" alt="connect-IMG" class="img-fluid ">
         </div>
@@ -260,25 +261,25 @@
         <div class="content-section__wrapper">
             <div class="container">
                 <div class="row row-sp--right">
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-up" data-aos-delay="0">
                         <img src="./dist/images/sheapromotion_2.png" alt="connect-IMG" class="img-fluid sp-displaynone">
                         <img src="./dist/images/sheapromotion_2-sp.png" alt="connect-IMG"
                             class="img-fluid pc-displaynone">
                     </div>
                     <div class="col-md-6">
                         <div class="text-content">
-                            <h2 class="title">
+                            <h2 class="title" data-aos="fade-up" data-aos-delay="50">
                                 A community of people lorem ipsum dolor sit amet
                             </h2>
 
-                            <div class="text-content__desc">
+                            <div class="text-content__desc" data-aos="fade-up" data-aos-delay="100">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                     incididunt
                                     ut
                                     labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
 
                             </div>
-                            <div class="link">
+                            <div class="link" data-aos="fade-up" data-aos-delay="150">
                                 <a href="#" class="link__button">
                                     Find members <span class="link__arrow"></span>
                                 </a>
@@ -296,12 +297,12 @@
 
             <div class="blockcard left-align-slick">
                 <div class="container">
-                    <h4 class="blockcard__title">
+                    <h4 class="blockcard__title" data-aos="fade-up" data-aos-delay="250">
                         Our Members
                     </h4>
                 </div>
                 <!-- TITLE END -->
-                <div class="blockcard__wrapper blockcard--slick">
+                <div class="blockcard__wrapper blockcard--slick" data-aos="fade-up" data-aos-delay="350">
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">PRODUCER NATIONAL ASSOCIATIONS</h5>
@@ -359,7 +360,7 @@
         <div class="content-section__wrapper">
             <div class="container">
                 <div class="row row-sp--left">
-                    <div class="col-md-6 pc-displaynone">
+                    <div class="col-md-6 pc-displaynone" data-aos="fade-up" data-aos-delay="0">
                         <img src="./dist/images/Image.png" alt="learn-IMG" class="img-fluid sp-displaynone">
                         <img src="./dist/images/sheapromotion_2-sp1.png" alt="learn-IMG"
                             class="img-fluid pc-displaynone">
@@ -367,16 +368,16 @@
 
                     <div class="col-md-6">
                         <div class="text-content">
-                            <h2 class="title">
+                            <h2 class="title" data-aos="fade-up" data-aos-delay="50">
                                 The go-to place for Shea resources lorem ipsum dolor sit amet
                             </h2>
 
-                            <div class="text-content__desc">
+                            <div class="text-content__desc" data-aos="fade-up" data-aos-delay="100">
                                 <p>A one sentence statement that expands on this resource. Concise and digestible.</p>
 
                             </div>
                             <div class="link">
-                                <a href="#" class="link__button">
+                                <a href="#" class="link__button" data-aos="fade-up" data-aos-delay="150">
                                     Find resources <span class="link__arrow"></span>
                                 </a>
                             </div>
@@ -396,12 +397,12 @@
 
             <div class="blockcard">
                 <div class="container">
-                    <h4 class="blockcard__title">
+                    <h4 class="blockcard__title" data-aos="fade-up" data-aos-delay="0">
                         Our Members
                     </h4>
                 </div>
                 <!-- TITLE END -->
-                <div class="blockcard__wrapper blockcard--slick">
+                <div class="blockcard__wrapper blockcard--slick" data-aos="fade-up" data-aos-delay="100">
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">FOOD</h5>
@@ -453,12 +454,12 @@
             <!-- SEPERATOR END -->
             <div class="resources">
                 <div class="container">
-                    <h4 class="blockcard__title">
+                    <h4 class="blockcard__title"data-aos="fade-up" data-aos-delay="50">
                         Featured resources
                     </h4>
                 </div>
                 <!-- TITLE END -->
-                <div class="blogcard">
+                <div class="blogcard" data-aos="fade-up" data-aos-delay="150">
                     <div class="container">
                         <div class="row bgnone-slider">
                             <div class="col-md-4">
@@ -524,6 +525,7 @@
     <script src="./dist/js/popper.min.js"></script>
     <script src="./dist/js/slick.min.js"></script>
     <script src="./dist/js/custom.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </body>
-
+ 
 </html>
