--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
     <link rel="stylesheet" href="./dist/css/styles.css">
     <title>Company Website</title>
 </head>
-
 <body>
     <header>
         <div class="sp-displaynone">
@@ -86,7 +85,9 @@
                                                 <div class="col-md-8">
                                                     <div class="row px-4">
                                                         <div class="col-md-6">
+
                                                             <div class="card card--bgnone">
+                                                                <a href="javascript:void(0)">
                                                                 <img class="card-img-top card-img--border"
                                                                     src="./dist/images/XL/Resource/Image-1.png"
                                                                     alt="Card image cap">
@@ -98,7 +99,9 @@
                                                                         Restoration Fund to protect
                                                                         shea parklands
                                                                     </h5>
+                                                                </a>
                                                                 </div>
+                                                                <a href="javascript:void(0);" class="card-link"></a>
                                                             </div>
                                                         </div>
                                                         <div class="col-md-6">
@@ -150,11 +153,18 @@
                 <div class="container">
 
                     <!-- Navbar brand -->
-                    <a href="javascript:void(0)" class="navbar__logo navbar-brand">
+                    <a href="#" class="navbar__logo navbar-brand">
                         <img src="./dist/images/dummy-logo.svg" alt="LOGO" class="img-fluid">
                     </a>
 
+                    <li class="navbar__item nav-item navbar__item--register pr-0">
+                        <a href="#" class="nav-link">
+                            JOIN US
+                        </a>
+                    </li>
+
                     <!-- Collapse button -->
+                    
                     <button class="navbar-toggler second-button" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent23" aria-controls="navbarSupportedContent23"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -215,7 +225,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <!-- CONATAINER END -->
+                            <!-- CONTAINER END -->
                         </div>
 
                     </div>
