Reconfigure card link

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                                         <div class="col-md-6">
 
                                                             <div class="card card--bgnone">
-                                                                <a href="javascript:void(0)">
+                                                                <a href="javascript:void(0)" class="card-link">
                                                                 <img class="card-img-top card-img--border"
                                                                     src="./dist/images/XL/Resource/Image-1.png"
                                                                     alt="Card image cap">
@@ -106,6 +106,7 @@
                                                         </div>
                                                         <div class="col-md-6">
                                                             <div class="card card--bgnone">
+                                                                <a href="javascript:void(0)" class="card-link">
                                                                 <img class="card-img-top card-img--border"
                                                                     src="./dist/images/XL/Resource/Image-1.png"
                                                                     alt="Card image cap">
@@ -118,6 +119,7 @@
                                                                         shea parklands
                                                                     </h5>
                                                                 </div>
+                                                            </a>
                                                             </div>
                                                         </div>
 
@@ -365,6 +367,7 @@
 
             <div class="blockcard left-align-slick">
                 <div class="container">
+                
                     <h4 class="blockcard__title" data-aos="fade-up" data-aos-delay="250">
                         Our Members
                     </h4>
@@ -376,8 +379,10 @@
                             <h5 class="card-title">PRODUCER NATIONAL ASSOCIATIONS</h5>
                             <p class="card-text">123 resources</p>
                         </div>
+                        <a href="javascript:void(0)" class="card-link">
                         <img class="card-img-bottom" src="./dist/images/Member/istockphoto-113565772-612x612_1.png"
                             alt="Card image cap">
+                        </a>
                     </div>
                     <!-- CARD 1 -->
 
@@ -386,8 +391,10 @@
                             <h5 class="card-title">Suppliers</h5>
                             <p class="card-text">123 resources</p>
                         </div>
+                        <a href="javascript:void(0)" class="card-link">
                         <img class="card-img-bottom" src="./dist/images/Member/istockphoto-113565772-612x612_3.png"
                             alt="Card image cap">
+                            </a>
                     </div>
                     <!-- CARD 1 -->
 
@@ -397,8 +404,10 @@
                                 Retailers</h5>
                             <p class="card-text">123 resources</p>
                         </div>
+                        <a href="javascript:void(0)" class="card-link">
                         <img class="card-img-bottom" src="./dist/images/Member/istockphoto-113565772-612x612_2.png"
                             alt="Card image cap">
+                            </a>
                     </div>
                     <!-- CARD 1 -->
 
@@ -407,8 +416,10 @@
                             <h5 class="card-title">Womens’ groups</h5>
                             <p class="card-text">123 resources</p>
                         </div>
+                        <a href="javascript:void(0)" class="card-link">
                         <img class="card-img-bottom" src="./dist/images/Member/istockphoto-113565772-612x612_1.png"
                             alt="Card image cap">
+                            </a>
                     </div>
                     <!-- CARD 1 -->
                 </div>
@@ -476,8 +487,10 @@
                             <h5 class="card-title">FOOD</h5>
                             <p class="card-text">123 resources</p>
                         </div>
+                        <a href="javascript:void(0)" class="card-link">
                         <img class="card-img-bottom" src="./dist/images/istockphoto-113565772-612x612_2.png"
                             alt="Card image cap">
+                        </a>
                     </div>
                     <!-- CARD 1 -->
 
@@ -486,8 +499,10 @@
                             <h5 class="card-title">Butter</h5>
                             <p class="card-text">123 resources</p>
                         </div>
+                        <a href="javascript:void(0)" class="card-link">
                         <img class="card-img-bottom" src="./dist/images/istockphoto-113565772-612x612_1.png"
                             alt="Card image cap">
+                            </a>
                     </div>
                     <!-- CARD 1 -->
 
@@ -496,8 +511,10 @@
                             <h5 class="card-title">cosmetics</h5>
                             <p class="card-text">123 resources</p>
                         </div>
+                        <a href="javascript:void(0)" class="card-link">
                         <img class="card-img-bottom" src="./dist/images/istockphoto-113565772-612x612_3.png"
                             alt="Card image cap">
+                            </a>
                     </div>
                     <!-- CARD 1 -->
 
@@ -506,8 +523,10 @@
                             <h5 class="card-title">sustainability</h5>
                             <p class="card-text">123 resources</p>
                         </div>
+                        <a href="javascript:void(0)" class="card-link">
                         <img class="card-img-bottom" src="./dist/images/istockphoto-113565772-612x612_3.png"
                             alt="Card image cap">
+                        </a>
                     </div>
                     <!-- CARD 1 -->
                 </div>
@@ -532,8 +551,10 @@
                         <div class="row bgnone-slider">
                             <div class="col-md-4">
                                 <div class="card card--bgnone">
+                                    <a href="javascript:void(0)" class="card-link">
                                     <img class="card-img-top card-img--border"
                                         src="./dist/images/XL/Resource/Image-1.png" alt="Card image cap">
+                                    </a>
                                     <div class="card-body card-body--bgnone">
                                         <p class="card-text"><span class="card-tag">INDUSTRY</span><small
                                                 class="card-update">i day ago</small></p>
@@ -559,11 +580,13 @@
                             <div class="col-md-4">
                                 <div class="card card--bgnone">
                                     <div class="card-img__wrapper">
+                                        <a href="javascript:void(0)" class="card-link">
                                         <img class="card-img-top card-img--border"
                                             src="./dist/images/XL/Resource/Image.png" alt="Card image cap">
                                         <div class="card-img__play">
                                             <img src="./dist/images/XL/Resource/Polygon_2.png" alt="">
                                         </div>
+                                        </a>
                                     </div>
                                     <div class="card-body">
                                         <p class="card-text"><span class="card-tag">cosmetics</span><small
