Update html div structure

--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
                                                                         Restoration Fund to protect
                                                                         shea parklands
                                                                     </h5>
+                                                                    </div>
                                                                 </a>
                                                                 </div>
-                                                                <a href="javascript:void(0);" class="card-link"></a>
                                                             </div>
                                                         </div>
                                                         <div class="col-md-6">
@@ -129,7 +129,6 @@
                                         </div>
                                     </div>
                                     <!-- DROPDROWN MENU END -->
-                                </div>
                             </li>
                             <li class="navbar__item nav-item">
                                 <a href="#" class="nav-link">Connect
@@ -159,11 +158,11 @@
                         <img src="./dist/images/dummy-logo.svg" alt="LOGO" class="img-fluid">
                     </a>
 
-                    <li class="navbar__item nav-item navbar__item--register pr-0">
+                    <div class="navbar__item nav-item navbar__item--register pr-0">
                         <a href="#" class="nav-link">
                             JOIN US
                         </a>
-                    </li>
+                    </div>
 
                     <!-- Collapse button -->
                     
